[JENKINS 00007]: Simplified AsyncPeriodWork and other further enhancements